@@ -1,7 +1,20 @@
-## Generator, is my name 
+# Generator, is my name 
 
+The content of this directory is dedicated for demos, the following projects: 
 
-Generator is a programm written in rust programming language, to generate a fixed length file of one billion record 
-the random data are taken from one billion row challange repository 
+## generator 
 
+It's a project written in rust programming language and cargo build tool, the main prupose of this project is to generate a fixed length file that hold one billion entries from a list 
+of cities and temperatures, the generation of the temperature values is not still generated randomly, but this feature is comming very soon 
 
+## jrecord_demo 
+
+This project is a maven project, you can build it and run it using any modene version, but we prefer jdk 23, the project itself contains a README.md file that hold some tipos how to run it
+
+## rocked 
+
+Rocked project is a maven project also made for compare the behaviour of a java Map and RocksDB in memory database
+
+## merged 
+
+Is a project that make a comparison between reading files using BufferedReaders vs Memory mapped files using FileChannel and FFM API, this project requires jdk 23 to run correctly of jdk 21 with --enable-preview feature . it's also a maven project 
